--- a/portaljcr/WebContent/pages/administrador/grupoCotacao/listar_grupoCotacao.xhtml
+++ b/portaljcr/WebContent/pages/administrador/grupoCotacao/listar_grupoCotacao.xhtml
@@ -28,7 +28,7 @@
 						<div class="row">
 							<div class="col-sm-2 col-md-2">
 								<p:commandButton
-									styleClass="btn btn-default"
+									styleClass="btn-azul"
 									icon="fa fa-plus"
 									value="Novo"
 									id="btn_novo_grupo_cotacao"
