--- a/portaljcr/WebContent/pages/administrador/usuario/editar_usuario.xhtml
+++ b/portaljcr/WebContent/pages/administrador/usuario/editar_usuario.xhtml
@@ -83,7 +83,7 @@
 															</div>
 															<div class="col-sm-1 col-md-1">
 																<p:commandButton
-																	styleClass="btn btn-default"
+																	styleClass="btn-verde"
 																	icon="fa fa-plus"
 																	process="@this, @form:selectGrupo"
 																	update="@form:painelGrupos"
@@ -129,7 +129,7 @@
 															</div>
 															<div class="col-sm-1 col-md-1">
 																<p:commandButton
-																	styleClass="btn btn-default"
+																	styleClass="btn-verde"
 																	icon="fa fa-plus"
 																	process="@this, @form:selectColigada"
 																	update="@form:painelColigada"
@@ -167,7 +167,7 @@
 								<div class="box-footer">
 									<div class="col-sm-4 col-md-4">
 										<p:commandButton
-											styleClass="btn btn-default"
+											styleClass="btn-vermelho"
 											icon="fa fa-arrow-left"
 											value="Voltar"
 											action="#{usuarioController.voltar()}"
@@ -177,8 +177,8 @@
 									</div>
 									<div class="col-sm-4 col-md-4">
 										<p:commandButton
-											styleClass="btn btn-default"
-											icon="fa fa-check"
+											styleClass="btn-verde"
+											icon="fa fa-save"
 											value="Salvar"
 											id="btn_salvar"
 											process="@form"
