--- a/portaljcr/WebContent/pages/solicitacaoCompra/cotacao/editar_cotacao.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/cotacao/editar_cotacao.xhtml
@@ -204,7 +204,7 @@
 										<div class="row" style="padding:0px;">
 											<div class="col-sm-3 col-md-3">
 												<p:commandButton
-													styleClass="btn btn-default"
+													styleClass="btn-azul"
 													icon="fa fa-fax"
 													value="Adicionar Cotação"
 													id="btn_add_nova_cotacao"
@@ -276,7 +276,7 @@
 								<div class="box-footer">
 									<div class="col-sm-3 col-md-3 pull-left">
 										<p:commandButton
-											styleClass="btn btn-default"
+											styleClass="btn-vermelho"
 											icon="fa fa-arrow-left"
 											value="Voltar"
 											id="btn_voltar"
@@ -287,7 +287,7 @@
 									</div>
 									<div class="col-sm-3 col-md-3 pull-right">
 										<p:commandButton
-											styleClass="btn btn-default"
+											styleClass="btn-vermelho"
 											icon="fa fa-check"
 											value="Concluir Cotação"
 											id="btn_concluir_cotação"
