--- a/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/exibir_cancelarSolicitacao.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/exibir_cancelarSolicitacao.xhtml
@@ -201,7 +201,7 @@
 								<div class="box-footer">
 									<div class="col-sm-3 col-md-3 pull-left">
 										<p:commandButton
-											styleClass="btn btn-default"
+											styleClass="btn-vermelho"
 											icon="fa fa-arrow-left"
 											value="Voltar"
 											id="btn_voltar"
@@ -212,7 +212,7 @@
 									</div>
 									<div class="col-sm-3 col-md-3 pull-right" >
 										<p:commandButton
-											styleClass="btn btn-default"
+											styleClass="btn-vermelho-claro"
 											icon="fa fa-trash"
 											value="Cancelar Solicitação"
 											id="btn_cancelar"
