--- a/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/exibir_solicitacao.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/exibir_solicitacao.xhtml
@@ -187,7 +187,7 @@
 								<div class="box-footer">
 									<div class="col-sm-3 col-md-3 pull-left">
 										<p:commandButton
-											styleClass="btn btn-default"
+											styleClass="btn-vermelho"
 											icon="fa fa-arrow-left"
 											value="Voltar"
 											id="btn_voltar"
