--- a/portaljcr/WebContent/pages/administrador/grupoCotacao/editar_grupoCotacao.xhtml
+++ b/portaljcr/WebContent/pages/administrador/grupoCotacao/editar_grupoCotacao.xhtml
@@ -53,12 +53,12 @@
 												</div>
 												<div class="col-sm-1 col-md-1">
 													<p:commandButton
-														styleClass="btn btn-default"
+														styleClass="btn-verde"
 														icon="fa fa-plus"
 														process="@this, @form:usuario"
 														update="@form:painelUsuarios"
 														action="#{grupoCotacaoController.adicionarUsuario()}"
-														id="btn_adicionarColigada"
+														id="btn_adicionarUsuario"
 														ajax="true" />
 												</div>
 											</div>
@@ -83,7 +83,7 @@
 								<div class="box-footer">
 									<div class="col-sm-4 col-md-4">
 										<p:commandButton
-											styleClass="btn btn-default"
+											styleClass="btn-vermelho"
 											icon="fa fa-arrow-left"
 											value="Voltar"
 											action="#{grupoCotacaoController.voltar()}"
@@ -93,8 +93,8 @@
 									</div>
 									<div class="col-sm-4 col-md-4">
 										<p:commandButton
-											styleClass="btn btn-default"
-											icon="fa fa-check"
+											styleClass="btn-verde"
+											icon="fa fa-save"
 											value="Salvar"
 											id="btn_salvar"
 											process="@form"
