--- a/portaljcr/WebContent/pages/administrador/suporte/categoriaChamado/editar_categoriaChamado.xhtml
+++ b/portaljcr/WebContent/pages/administrador/suporte/categoriaChamado/editar_categoriaChamado.xhtml
@@ -53,7 +53,7 @@
 												</div>
 												<div class="col-sm-1 col-md-1">
 													<p:commandButton
-														styleClass="btn btn-default"
+														styleClass="btn-verde"
 														icon="fa fa-plus"
 														process="@this, @form:subcategoria"
 														update="@form:painelSubcategoria"
@@ -83,7 +83,7 @@
 								<div class="box-footer">
 									<div class="col-sm-4 col-md-4">
 										<p:commandButton
-											styleClass="btn btn-default"
+											styleClass="btn-vermelho"
 											icon="fa fa-arrow-left"
 											value="Voltar"
 											action="#{categoriaChamadoController.voltar()}"
@@ -93,8 +93,8 @@
 									</div>
 									<div class="col-sm-4 col-md-4">
 										<p:commandButton
-											styleClass="btn btn-default"
-											icon="fa fa-check"
+											styleClass="btn-verde"
+											icon="fa fa-save"
 											value="Salvar"
 											id="btn_salvar"
 											process="@form"
