--- a/portaljcr/WebContent/pages/administrador/usuario/listar_usuario.xhtml
+++ b/portaljcr/WebContent/pages/administrador/usuario/listar_usuario.xhtml
@@ -59,7 +59,7 @@
 								<div class="box-footer">
 									<div class="col-sm-4 col-md-4">
 										<p:commandButton
-											styleClass="btn btn-default"
+											styleClass="btn-vermelho"
 											icon="fa fa-search"
 											value="Pesquisar"
 											id="btn_pesquisar"
@@ -71,7 +71,7 @@
 									</div>
 									<div class="col-sm-4 col-md-4">
 										<p:commandButton
-											styleClass="btn btn-default"
+											styleClass="btn-azul"
 											icon="fa fa-download"
 											value="Sincronizar com Active Directory"
 											action="#{usuarioController.sincronizar()}"
