--- a/portaljcr/WebContent/pages/solicitacaoCompra/cotacao/editar_concluirCotacao.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/cotacao/editar_concluirCotacao.xhtml
@@ -53,7 +53,7 @@
 								<div class="box-footer">
 									<div class="col-sm-3 col-md-3 pull-left">
 										<p:commandButton
-											styleClass="btn btn-default"
+											styleClass="btn-vermelho"
 											icon="fa fa-arrow-left"
 											value="Voltar"
 											id="btn_voltar"
@@ -64,7 +64,7 @@
 									</div>
 									<div class="col-sm-3 col-md-3 pull-right"> 
 										<p:commandButton
-											styleClass="btn btn-default"
+											styleClass="btn-verde"
 											icon="fa fa-check-square-o"
 											value="Concluir"
 											id="btn_concluir_cotação"
