--- a/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/listar_minhasSolicitacoes.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/listar_minhasSolicitacoes.xhtml
@@ -77,7 +77,7 @@
 								<div class="box-footer">
 									<div class="col-sm-4 col-md-4">
 										<p:commandButton
-											styleClass="btn btn-default"
+											styleClass="btn-vermelho"
 											icon="fa fa-search"
 											value="Pesquisar"
 											id="btn_pesquisar"
