--- a/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/nova_solicitacao_pre.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/nova_solicitacao_pre.xhtml
@@ -76,7 +76,7 @@
 								<div class="box-footer">
 									<div class="col-sm-4 col-md-4">
 										<p:commandButton
-											styleClass="btn btn-default"
+											styleClass="btn-vermelho"
 											icon="fa fa-arrow-circle-right"
 											value="Prosseguir"
 											id="btn_salvar"
