--- a/portaljcr/WebContent/pages/suporte/listar_relatorioChamado.xhtml
+++ b/portaljcr/WebContent/pages/suporte/listar_relatorioChamado.xhtml
@@ -194,7 +194,7 @@
 									<div class="box-footer">
 										<div class="col-sm-4 col-md-4">
 											<p:commandButton
-												styleClass="btn btn-default"
+												styleClass="btn-vermelho"
 												icon="fa fa-filter"
 												value="Filtrar"
 												id="btn_filtrar"
