--- a/portaljcr/WebContent/pages/suporte/novo_chamado.xhtml
+++ b/portaljcr/WebContent/pages/suporte/novo_chamado.xhtml
@@ -134,8 +134,8 @@
 								<div class="box-footer">
 									<div class="col-sm-3 col-md-3" >
 										<p:commandButton
-											styleClass="btn btn-default"
-											icon="fa fa-check"
+											styleClass="btn-verde"
+											icon="fa fa-save"
 											value="Salvar"
 											id="btn_salvar"
 											process="@form"
