--- a/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/listar_minhasSolicitacoes.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/listar_minhasSolicitacoes.xhtml
@@ -143,10 +143,11 @@
 							</p:commandLink>
 						</p:column>
 						
-						<p:column headerText="Cotação" style="text-align: center;font-size:12px;" width="5%">
-							<p:commandLink ajax="true" process="@this" action="#{minhaSolicitacaoCompraController.iniciarCancelamento()}" rendered="#{solicitacao.situacao eq 'AGUARDANDO_APRV_COTACAO'}" >
-								<h:outputText value="" title="Cotação" styleClass="fa fa-calculator" />
-								<f:setPropertyActionListener value="#{solicitacao}" target="#{minhaSolicitacaoCompraController.solicitacaoCompra}" />
+						<p:column headerText="Cotação" style="text-align: center;font-size:12px;" width="8%">
+							<p:commandLink ajax="true" process="@this" action="#{cotacaoController.cotar()}" rendered="#{solicitacao.situacao eq 'AGUARDANDO_APRV_COTACAO'}">
+								<h:outputText value="" title="Iniciar Cotação" styleClass="fa fa-calculator" />
+								<f:setPropertyActionListener value="#{solicitacao}" target="#{cotacaoController.solicitacaoCompra}" />
+								<f:setPropertyActionListener value="MINHA_SOLICITACAO" target="#{cotacaoController.origem}" />
 							</p:commandLink>
 						</p:column>
 					    
