--- a/portaljcr/WebContent/pages/solicitacaoCompra/cotacao/editar_concluirCotacao.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/cotacao/editar_concluirCotacao.xhtml
@@ -26,7 +26,7 @@
 							<p><i class="icon fa fa-caret-right"></i> 1. Possuir todos os produtos/serviços solicitados na cotação e com menor valor.</p>
 							<p><i class="icon fa fa-caret-right"></i> 2. Possuir parcialmente os produtos/serviços e com menor valor.</p>
 						</div>
-						<div class="alert alert-danger alert-dismissible">
+						<div class="alert alert-danger alert-dismissible" jsf:rendered="#{!cotacaoController.possuiMinimoCotacao}">
 							<h4><i class="icon fa fa-warning"></i> ATENÇÃO!</h4>
 							Você não efetuou <strong>3</strong> cotações, para concluir você deve preencher a <strong>justificativa</strong>.
 						</div>
@@ -54,15 +54,17 @@
 										</ui:repeat>
 									</div>
 								</div>
-								<div class="form-group">
-									<div class="col-sm-12 col-md-12">
-										<label for="justificativa">Justificativa: *</label>
+								<p:outputPanel rendered="#{!cotacaoController.possuiMinimoCotacao}">
+									<div class="form-group">
+										<div class="col-sm-12 col-md-12">
+											<label for="justificativa">Justificativa: *</label>
+										</div>
+	
+										<div class="col-sm-12 col-md-12">
+											<h:inputTextarea id="justificativa" value="#{cotacaoController.solicitacaoCompra.justificativa}" styleClass="form-control" rows="3" readonly="#{item.naoPossui}" />
+										</div>
 									</div>
-
-									<div class="col-sm-12 col-md-12">
-										<h:inputTextarea id="justificativa" value="#{cotacaoController.solicitacaoCompra.justificativa}" styleClass="form-control" rows="3" readonly="#{item.naoPossui}" />
-									</div>
-								</div>
+								</p:outputPanel>
 								<div class="box-footer">
 									<div class="col-sm-3 col-md-3 pull-left">
 										<p:commandButton
