--- a/portaljcr/WebContent/pages/solicitacaoCompra/cotacao/listar_minhasCotacoes.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/cotacao/listar_minhasCotacoes.xhtml
@@ -32,10 +32,10 @@
 		            		<div class="form-horizontal">
 								<div class="box-body">
 									<div class="form-group">
-										<label for="situacao" class="col-sm-2 col-md-2 control-label">Nº da Solicitação:</label>
+										<label for="numeroSolicitacao" class="col-sm-2 col-md-2 control-label">Nº da Solicitação:</label>
 	
 										<div class="col-sm-2 col-md-2">
-									       <h:inputText id="nome" value="#{cotacaoController.filtro.numeroSolicitacao}" styleClass="form-control" onkeyup="filterNumberOnly(this);" />
+									       <h:inputText id="numeroSolicitacao" value="#{cotacaoController.filtro.numeroSolicitacao}" styleClass="form-control" onkeyup="filterNumberOnly(this);" />
 										</div>
 									</div>
 									<div class="form-group">
