--- a/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/listar_minhasSolicitacoes.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/listar_minhasSolicitacoes.xhtml
@@ -32,6 +32,13 @@
 		            		<div class="form-horizontal">
 								<div class="box-body">
 									<div class="form-group">
+										<label for="numeroSolicitacao" class="col-sm-2 col-md-2 control-label">Nº da Solicitação:</label>
+	
+										<div class="col-sm-2 col-md-2">
+									       <h:inputText id="numeroSolicitacao" value="#{minhaSolicitacaoCompraController.filtro.numeroSolicitacao}" styleClass="form-control" onkeyup="filterNumberOnly(this);" />
+										</div>
+									</div>
+									<div class="form-group">
 										<label for="coligada" class="col-sm-2 col-md-2 control-label">Empresa:</label>
 	
 										<div class="col-sm-10 col-md-10">
@@ -118,9 +125,9 @@
 					        <h:outputText value="#{solicitacao.codigoCentroCusto}  -  #{solicitacao.centroCusto}" />
 					    </p:column>
 					    
-					     <p:column headerText="Natureza Orçamentária" style="text-align:center;font-size:12px;">
-					        <h:outputText value="#{solicitacao.codigoNaturezaOrcamentaria}  -  #{solicitacao.naturezaOrcamentaria}" />
-					    </p:column>
+<!-- 					     <p:column headerText="Natureza Orçamentária" style="text-align:center;font-size:12px;"> -->
+<!-- 					        <h:outputText value="#{solicitacao.codigoNaturezaOrcamentaria}  -  #{solicitacao.naturezaOrcamentaria}" /> -->
+<!-- 					    </p:column> -->
 
 					    <p:column headerText="Data da Solicitação" style="text-align:center;font-size:12px;" >
 					        <h:outputText value="#{solicitacao.dtSolicitacao}" >
@@ -144,7 +151,7 @@
 						</p:column>
 						
 						<p:column headerText="Cotação" style="text-align: center;font-size:12px;" width="8%">
-							<p:commandLink ajax="true" process="@this" action="#{cotacaoController.cotar()}" rendered="#{solicitacao.situacao eq 'AGUARDANDO_APRV_COTACAO'}">
+							<p:commandLink ajax="true" process="@this" action="#{cotacaoController.cotar()}" rendered="#{solicitacao.situacao eq 'AGUARDANDO_APRV_COTACAO' or solicitacao.situacao eq 'LIBERADO_ORDEM_COMPRA'}">
 								<h:outputText value="" title="Iniciar Cotação" styleClass="fa fa-calculator" />
 								<f:setPropertyActionListener value="#{solicitacao}" target="#{cotacaoController.solicitacaoCompra}" />
 								<f:setPropertyActionListener value="MINHA_SOLICITACAO" target="#{cotacaoController.origem}" />
