--- a/portaljcr/WebContent/pages/solicitacaoCompra/cotacao/editar_novaCotacao.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/cotacao/editar_novaCotacao.xhtml
@@ -169,7 +169,7 @@
 													</div>
 													<div class="form-group">
 														<div class="col-sm-2 col-md-2 control-label">
-															<label for="observacaoCotacao">Observação: </label>
+															<label for="observacaoCotacao">Observação: *</label>
 														</div>
 					
 														<div class="col-sm-10 col-md-10">
