--- a/portaljcr/WebContent/pages/solicitacaoCompra/cotacao/editar_liberarCompra.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/cotacao/editar_liberarCompra.xhtml
@@ -21,11 +21,11 @@
 			<div class="page-content-central ui-fluid">
 				<h:form id="solicitacaoForm" acceptcharset="ISO-8859-1" lang="pt_BR">
 					<f:validateBean disabled="true" for="@form">
-						<div class="alert alert-success alert-dismissible">
-							<h4><i class="icon fa fa-info"></i> Critérios para a Melhor Opção!</h4>
-							<p><i class="icon fa fa-caret-right"></i> 1. Possuir todos os produtos/serviços solicitados na cotação e com menor valor.</p>
-							<p><i class="icon fa fa-caret-right"></i> 2. Possuir parcialmente os produtos/serviços e com menor valor.</p>
-						</div>
+<!-- 						<div class="alert alert-success alert-dismissible"> -->
+<!-- 							<h4><i class="icon fa fa-info"></i> Critérios para a Melhor Opção!</h4> -->
+<!-- 							<p><i class="icon fa fa-caret-right"></i> 1. Possuir todos os produtos/serviços solicitados na cotação e com menor valor.</p> -->
+<!-- 							<p><i class="icon fa fa-caret-right"></i> 2. Possuir parcialmente os produtos/serviços e com menor valor.</p> -->
+<!-- 						</div> -->
 						<p:panel toggleable="false" id="painelNovaSolicitacao" styleClass="box box-danger">
 							<div class="box-header">
 		             			<h3 class="box-title">Selecione uma cotação para liberar a compra: </h3>
