solicitação de compra

--- a/portaljcr/WebContent/pages/suporte/editar_chamado.xhtml
+++ b/portaljcr/WebContent/pages/suporte/editar_chamado.xhtml
@@ -352,7 +352,7 @@
 							<div class="box-body">
 								<div class="form-group">
 									<div class="col-sm-12 col-md-12">
-										<label>Seu chamado foi solucionado?</label>
+										<label>Seu problema foi solucionado?</label>
 									</div>
 
 									<div class="col-sm-12 col-md-12">
