--- a/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/nova_solicitacao.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/nova_solicitacao.xhtml
@@ -251,7 +251,7 @@
 								</div>
 								<div class="form-group">
 									<div class="col-sm-3 col-md-3 control-label">
-										<label for="valorAproximado">Valor Aproximado: </label>
+										<label for="valorAproximado">Valor Aproximado:  *</label>
 									</div>
 
 									<div class="col-sm-3 col-md-3">
