--- a/portaljcr/resources/email/solicitacaoCompra/email.solicitacaoCompraAprovada.html
+++ b/portaljcr/resources/email/solicitacaoCompra/email.solicitacaoCompraAprovada.html
@@ -61,7 +61,7 @@
 								<tr>
 									<td>
 										<h2 style="color: #39434d; font-size: 12px; padding-left: 10px;">
-											Sua solicita&ccedil;&atilde;o foi aprovada e foi encaminhada para cota&ccedil;&atilde;o.<br>
+											${textoAprovador}<br>
 										</h2>
 										<h3
 											style="color: #39434d; font-size: 12px; padding-left: 10px; border-bottom: 1px solid #CCCCCC">SOLICITA&Ccedil;&Atilde;O N&#186; ${numeroSolicitacao}</h3>
