--- a/portaljcr/resources/email/solicitacaoCompra/email.solicitacaoCompraRecusada.html
+++ b/portaljcr/resources/email/solicitacaoCompra/email.solicitacaoCompraRecusada.html
@@ -61,7 +61,7 @@
 								<tr>
 									<td>
 										<h2 style="color: #39434d; font-size: 12px; padding-left: 10px;">
-											Sua solicita&ccedil;&atilde;o foi recusada.<br>
+											${textoAprovador}<br>
 										</h2>
 										<div>
 											<h3
