--- a/portaljcr/WebContent/pages/solicitacaoCompra/cotacao/editar_liberarCompra.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/cotacao/editar_liberarCompra.xhtml
@@ -53,6 +53,15 @@
 											</ui:repeat>
 										</p:outputPanel>
 									</div>
+									<div class="form-group">
+										<div class="col-sm-12 col-md-12">
+											<label for="justificativaLiberacao">Justificativa: </label>
+										</div>
+	
+										<div class="col-sm-12 col-md-12">
+											<h:inputTextarea id="justificativaLiberacao" value="#{cotacaoController.solicitacaoCompra.justificativaLiberacao}" styleClass="form-control" rows="3" />
+										</div>
+									</div>
 								</div>
 								<div class="box-footer">
 									<div class="col-sm-3 col-md-3 pull-left">
@@ -72,7 +81,7 @@
 											icon="fa fa-check-square-o"
 											value="Liberar"
 											id="btn_liberar_cotação"
-											process="@this"
+											process="@this, @form:justificativaLiberacao"
 											action="#{cotacaoController.liberar()}"
 											ajax="true">
 											<p:confirm header="Confirmação!" message="Tem certeza que deseja liberar a cotação para compra?" icon="fa fa-warning" />
